# lenna-qt

./: .clang-tidy  .codeclimate.yml  .coveralls.yml  .travis.linux  .travis.yml  AUTHORS  CMakeLists.txt  CNAME  Jenkinsfile  PLUGINS.md  README.md  appveyor.yml  index.html  lenna-config.cmake  lenna-qt-config.cmake  lenna.pro  params.json  snapcraft.yaml
.github/workflows/: .ci.yml
cmake/: 3rdParty.cmake  Clang-Format.cmake  Clang-Tidy.cmake  CompileOptions.cmake  RuntimeDependencies.cmake
data/tips/: tips_de.txt  tips_en.txt  tips_ru.txt
deploy/: CMakeLists.txt  lenna-qt.appdata.xml  lenna-qt.desktop  lenna.appdata.xml  lenna.desktop
doc/: CMakeLists.txt  Doxyfile.in
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/manual/: CMakeLists.txt
lenna/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  image.cpp  image.h  imageprocessor.cpp  imageprocessor.h  lenna.cpp  lenna.h  lenna.pro  lenna.qrc  logger.cpp  logger.h  loggerdialog.cpp  loggerdialog.h  loggerdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  process.cpp  process.h  splashscreen.cpp  splashscreen.h  tipsdialog.h  translation.cpp  translation.h  worker.cpp  worker.h
lenna/plugins/: editplugin.h  inputplugin.h  outputplugin.h  pcpluginwidget.cpp  pcpluginwidget.h  pcpluginwidget.ui  plugin.h  pluginloader.cpp  pluginloader.h  pluginsconfigdialog.cpp  pluginsconfigdialog.h  pluginsconfigdialog.ui
lenna/resources/: authors.html  gpl-3.0-code.txt  thanksto.html
package/: _service  debian.changelog  debian.control  debian.rules  lenna.dsc
plugins/: CMakeLists.txt  plugins.pro
plugins/blur/: CMakeLists.txt  blur.cpp  blur.h  blur.qrc  previewimagelabel.cpp  previewimagelabel.h  widget.cpp  widget.h
plugins/camera/: CMakeLists.txt  camera.cpp  camera.h  camera.json  widget.cpp  widget.ui
plugins/crop/: CMakeLists.txt  crop.cpp  crop.h  widget.cpp  widget.h
plugins/filechooser/: CMakeLists.txt  filechooser.cpp  filechooser.h  filechooser.pro  widget.cpp  widget.h  widget.ui
plugins/filtermatrix/: CMakeLists.txt  filtermatrix.cpp  filtermatrix.h  widget.cpp  widget.h  widget.ui
plugins/rename/: CMakeLists.txt  rename.h  rename.qrc  widget.ui
plugins/resize/: CMakeLists.txt  resize.cpp  resize.h  resize.qrc  widget.cpp  widget.h  widget.ui
plugins/savefile/: CMakeLists.txt  savefile.cpp  savefile.h  savefile.pro  widget.cpp  widget.h  widget.ui
plugins/textoverlay/: CMakeLists.txt  textoverlay.cpp  textoverlay.h  textoverlay.json  widget.cpp  widget.ui
source/: CMakeLists.txt
source/lenna/: CMakeLists.txt
source/lenna/include/: aboutdialog.h  defines.h.in  imageprocessor.h  loggerdialog.h  mainwindow.h  process.h  splashscreen.h  tipsdialog.h  translation.h  worker.h
source/lenna/include/plugins/: activepcpluginwidget.h  pcpluginwidget.h  pluginloader.h  pluginsconfigdialog.h
source/lenna/resource/: about.html  authors.html  lenna.qrc
source/lenna/source/: aboutdialog.cpp  aboutdialog.ui  imageprocessor.cpp  logger.cpp  loggerdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  process.cpp  splashscreen.cpp  tipsdialog.cpp  translation.cpp  worker.cpp
source/lenna/source/plugins/: activepcpluginwidget.cpp  activepcpluginwidget.ui  pcpluginwidget.cpp  pcpluginwidget.ui  pluginloader.cpp  pluginsconfigdialog.cpp  pluginsconfigdialog.ui
source/lennaplugin/: CMakeLists.txt
source/lennaplugin/include/lenna/: image.h  lenna.h  logger.h
source/lennaplugin/include/lenna/plugins/: editplugin.h  inputplugin.h  outputplugin.h  plugin.h
source/lennaplugin/source/: image.cpp  lenna.cpp  logger.cpp
source/lennaplugins/: CMakeLists.txt
source/lennaplugins/blur/: CMakeLists.txt  blur.cpp  blur.h  blur.json  previewimagelabel.cpp  previewimagelabel.h  widget.cpp  widget.h  widget.ui
source/lennaplugins/camera/: CMakeLists.txt  camera.cpp  camera.h  widget.cpp  widget.h
source/lennaplugins/crop/: CMakeLists.txt  crop.cpp  crop.h  crop.json  crop.qrc  widget.cpp  widget.h  widget.ui
source/lennaplugins/filechooser/: CMakeLists.txt  filechooser.cpp  filechooser.h  filechooser.json  widget.cpp  widget.h
source/lennaplugins/filtermatrix/: CMakeLists.txt  filtermatrix.cpp  filtermatrix.h  filtermatrix.json  filtermatrix.qrc  previewimagelabel.cpp  widget.cpp  widget.h
source/lennaplugins/flickrdownloader/: CMakeLists.txt  flickrdownloader.cpp  flickrdownloader.h  flickrdownloader.json  widget.cpp  widget.h  widget.ui
source/lennaplugins/haarcascadecrop/: CMakeLists.txt  haarcascadecrop.cpp  haarcascadecrop.h  haarcascadecrop.qrc  widget.cpp  widget.h  widget.ui
source/lennaplugins/haarcascadetrainer/: CMakeLists.txt  haarcascadetrainer.cpp  haarcascadetrainer.h  widget.cpp  widget.h  widget.ui
source/lennaplugins/rename/: CMakeLists.txt  rename.cpp  rename.h  rename.json  widget.cpp  widget.h
source/lennaplugins/resize/: CMakeLists.txt  resize.cpp  resize.h  resize.json  widget.cpp  widget.h  widget.ui
source/lennaplugins/savefile/: CMakeLists.txt  savefile.cpp  savefile.h  savefile.json  widget.cpp  widget.h
source/lennaplugins/textoverlay/: CMakeLists.txt  textoverlay.cpp  textoverlay.h  textoverlay.qrc  widget.cpp  widget.h  widget.ui
source/lennaplugins/timestamp/: CMakeLists.txt  timestamp.cpp  timestamp.h  timestamp.json  timestamp.qrc  widget.cpp  widget.h  widget.ui
source/tests/: CMakeLists.txt
source/tests/lenna-test/: CMakeLists.txt  lenna_test.cpp  main.cpp
src/: CMakeLists.txt  aboutdialog.ui  defines.h.cmake  image.cpp  imageprocessor.h  lenna.qrc  logger.cpp  loggerdialog.cpp  loggerdialog.h  main.cpp  mainwindow.cpp  process.cpp  process.h  tipsdialog.cpp  tipsdialog.ui
src/plugins/: inputplugin.h  pcpluginwidget.cpp  pcpluginwidget.h
src/resources/: gpl-3.0.rtf
tips/: tips_fr.txt
