########### Subdirectories ###############
cmake_minimum_required(VERSION 2.8.9)
project(Lenna)

#add_subdirectory( filechooser )
add_subdirectory( camera )
#add_subdirectory( savefile )

#add_subdirectory( blur )
add_subdirectory( rename )
add_subdirectory( resize )
#add_subdirectory( filtermatrix )
